welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:10: error: type mismatch;
 found   : Int
 required: String
				sol=i
                                    ^indexOfValue:12: error: type mismatch;
 found   : String
 required: Int
				return sol
                                       ^indexOfValue:19: error: type mismatch;
 found   : String
 required: Int
				return sol
                                       ^